--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
       </form>
     </div>
 
-    <!-- Botões de ação -->
+    <!-- Botões -->
     <div class="botoes">
       <button class="btn entrar">Entrar</button>
       <a href="cadastro.html" class="btn registrar">Cadastrar</a>
